fix(style): overflow on mobile

--- a/product-preview-card/src/style.css
+++ b/product-preview-card/src/style.css
@@ -195,7 +195,6 @@ h1 {
     max-width: 340px;
     min-height: 610px;
     height: auto;
-    overflow: inherit;
   }
 
   .card-content {
